modified scrollbars / fixed firebase query

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@
   --color-bg-button: #1a1a1a;
   --color-border-button: #464646;
 
+  --color-bg-scrollbar: #464646;
+
   --color-border-input: #464646;
   --color-bg-input: #1a1a1a;
 
